[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-openapi"
dynamic = ["version"]
description = "An opinionated, lightweight black-box contract tester against a live API using its OpenAPI specification as the source of truth"
readme = "README.md"
authors = [
    { name = "Sinan Ozel", email = "coding@sinan.slmail.me" },
]
license = { file = "LICENSE" }
dependencies = [
    "pytest>=7.0.0",
    "requests>=2.31.0",
    "exrex>=0.11.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",          # For running tests
    "pytest-depends>=1.0.1",  # For test dependency management
    "pytest-mock>=3.14.0",    # For mocking in tests
    "httpx>=0.28.1",          # To make more complex calls, such as streaming.
]

dev = [
    "isort>=5.12.0",          # For import sorting
    "ruff>=0.12.11",          # For linting
    "black>=24.0.0",          # For code formatting (Black)
    "docformatter>=1.7.5",    # For formatting docstrings
]

docs = [
    "mkdocs-material>=9.0.0", # Material theme for MkDocs
    "mkdocstrings[python]>=0.24.0",  # API documentation from docstrings
    "mike>=2.0.0",           # For versioned documentation
]

publish = [
    "packaging>=25.0",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["RUF001"]

[tool.black]
line-length = 80
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 80

[tool.setuptools.dynamic]
version = { attr = "pytest_openapi.__version__" }

[project.urls]
Homepage = "https://github.com/sinan-ozel/pytest-openapi"
Issues = "https://github.com/sinan-ozel/pytest-openapi/issues"

[project.entry-points.pytest11]
pytest_openapi = "pytest_openapi.plugin"
